--- a/style.css
+++ b/style.css
@@ -122,3 +122,12 @@
     text-align: right;
     font-weight: bold;
 }
+
+.footer {
+    justify-content: center;
+    align-items: center;
+    background-color: #1f2937;
+    color:white;
+    font-size: 20px;
+    padding: 40px 0;
+}
