--- a/style.css
+++ b/style.css
@@ -123,6 +123,32 @@
     font-weight: bold;
 }
 
+.call-to-action-container {
+    background-color: #3882f6;
+    color: #e5e7eb;
+    border-radius: 10px;
+    width: 70%;
+    margin: 90px auto;
+    padding: 60px 0;
+    justify-content: space-around;
+    font-size: 20px;
+}
+
+.call-to-action-container .title {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.call-to-action-container button {
+    color: #e5e7eb;
+    font-size: 22px;
+    font-weight: bold;
+    padding: 3px 37px;
+    background-color: transparent;
+    border: 3px solid #e5e5e5;
+    border-radius: 10px;
+}
+
 .footer {
     justify-content: center;
     align-items: center;
